# ChatGPTalkie

./: README.md  chatgpt.py  main.py  polly.py  pyproject.toml  record.py  sounds.py  utils.py
